--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,7 +93,7 @@ img{
     }
 /*= REUSABLE CSS CLASSES */
 .section{
-    padding: 2rem 0 4rem;
+    padding: 3rem 1rem;
     }
 .section_title{
 font-size: var(--h1-font-size);
@@ -331,6 +331,7 @@ width: 220px;
   border-radius: 1rem;
   flex-shrink: 0;
   margin-left: -15rem;
+  display:block;
 }
 .portfolio-card {
   background-color: #111;
@@ -479,7 +480,6 @@ width: 220px;
   height: 100vh;
   object-fit: cover;
   display: block;
-}
 
 /* =============== SIMPLE FOOTER (optional) =============== */
 footer {
@@ -487,4 +487,29 @@ footer {
     padding: 2rem 1rem;
     font-size: var(--small-font-size);
     color: var(--text-color-light);
+}
+@media (max-width: 768px) {
+  .about-wrapper,
+  .experience-wrapper,
+  .skills-row {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .personalpic,
+  .experience-logo {
+    margin: 0 auto;
+     margin-left: 0;
+    margin-right: 0;
+  }
+
+  .about-text,
+  .experience-entry {
+    max-width: 90%;
+  }
+
+  .hero-image {
+    height: auto;
+  }
 }
